# NodePy

./: .dockerignore  .gitignore  README.md  pyproject.toml  test.py
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/scripts/: gen_api.ts
client/src/: App.vue  ModalManager.vue  main.ts  openapi.json  vue-shims.d.ts
client/src/common/: elmessage.css  global.scss  node.scss
client/src/components/: ControlBar.vue  CustomEdge.vue  Graph.vue  GraphControls.vue  GraphInfo.vue  Loading.vue  Logout.vue  Modal.vue  NodePyConnectionLine.vue  NodePyEdge.vue  (+6 more)
docs/: NodesDataStruct.md  TODO.md  backend_architecture.md  frontend_architecture.md  nodes.md  nodesWorkProgress.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/docker/: server.Dockerfile  worker.Dockerfile
scripts/: build.py  persist_project.py  prepare_test_data.sql
server/: __init__.py  celery.py  config.py  main.py  pyproject.toml
server/api/: __init__.py  auth.py  data.py  explore.py  files.py  nodes.py  project.py  user.py
server/app/: context.py  main.py
server/engine/: Graph.py  __init__.py  executer.py  main.py  task.py  test.py
server/interpreter/: control_structure.py  interpreter.py  task.py
server/lib/: ApiLoggerMiddleware.py  AuthUtils.py  CacheManager.py  DataManager.py  ExampleProjManager.py  FileManager.py  FinancialDataManager.py  ProjectLock.py  SreamQueue.py  StreamQueue.py  __init__.py  utils.py
server/models/: data.py  data_view.py  database.py  example_list.py  exception.py  explore_list.py  file.py  graph.py  project.py  project_list.py  project_topology.py  schema.py  types.py
tests/: test_graph.py  test_node.py  test_nodes.py  test_ws_integration.py
tests/nodes/: README.md  __init__.py  conftest.py  test_node_framework.py  utils.py
(+549 files in other folders)
