[project]
name = "nodepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "taskipy>=1.13.0",
]

[tool.taskipy.tasks]
build = "python -m scripts.build build"
dev = "python -m scripts.build dev"
prod = "python -m scripts.build prod"
