[project]
name = "nodepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
]

[dependency-groups]
dev = [
    "taskipy>=1.13.0",
]

[tool.taskipy.tasks]
build = "python -m scripts.build build"
dev = "python -m scripts.build dev"
prod = "python -m scripts.build prod"
