[project]
name = "nodepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0, <3.14.0"
dependencies = [
    "fastapi>=0.118.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "celery>=5.5.3",
    "redis>=6.4.0",
    "websockets>=15.0.1",
    "minio>=7.2.18",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "pygments>=2.19.2",
    "pytest>=8.4.2",
    "stats-code>=0.1.1",
    "taskipy>=1.13.0",
]

[tool.taskipy.tasks]
build = "python -m scripts.build build"
dev = "python -m scripts.build dev"
prod = "python -m scripts.build prod"
